# fractals

./: .gitignore  .gitmodules  CMakeLists.txt  Graphics.sln
scripts/: clean.bat  incremental_build.bat  run.bat
src/: Graphics.vcxproj  camera.cpp  camera.h  cglm_wrapper.c  cglm_wrapper.h  main.c  main.cpp  window.c  window.h
src/shaders/: fragment.glsl  vertex.glsl
